Stop jumping the container

--- a/_sass/responsive/_xlarge.scss
+++ b/_sass/responsive/_xlarge.scss
@@ -51,5 +51,5 @@ $size-header: 21em;
 	}
 
 	.container {
-		width:80%;
+		width: 45em;
 	}
